--- a/public/css/autentiticacao.css
+++ b/public/css/autentiticacao.css
@@ -1,5 +1,6 @@
 body {
   background-color: #f6fafd;
+  font-family: "Rubik", sans-serif;
 }
 
 
@@ -110,14 +111,19 @@ body {
 .sign-up-form input {
   box-shadow: none;
   width: 95%;
-  padding: 10px;
+  padding: 12px;
   border-radius: 5px;
   border: 1px solid gray;
 }
+
 .sign-up-form input:focus {
   border-color: #317961;
   border: 1.5px solid;
   outline: none;
+}
+
+.sign-up-form input::placeholder {
+  font-size: 15px;
 }
 
 .sign-up-form button {
