--- a/public/css/autentiticacao.css
+++ b/public/css/autentiticacao.css
@@ -47,26 +47,42 @@ body {
     display: none;
   }
   .sign-up-rightside {
-    width: 100%;
+    width: 100% !important;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center; 
-    align-items: center;
+    align-items: center !important;
   }
   .sign-up-container {
     width: 100%;
     height: 94vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center !important;
     transition: all 0.5s ease;
   }
-  
 
-  h1 {
-    font-size: 20px;
+  #formHeader h1{
+    font-size: 12px;
   }
+
+  #spanLogoHeader{
+    display: flex !important;
+  }
+  .sign-up-form {
+    width: 70%; 
+    max-width: 600px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center !important;
+    padding-top: 0 !important;
+    gap: 20px;
+    margin: 0 auto;
+  }
+
 }
 
 .sign-up-rightside {
@@ -97,7 +113,7 @@ body {
 
 .sign-up-form {
   width: 70%; 
-  max-width: 500px;
+  max-width: 600px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -106,7 +122,6 @@ body {
   gap: 20px;
   margin: 0 auto;
 }
-
 
 .sign-up-form input {
   box-shadow: none;
@@ -163,7 +178,11 @@ body {
 #formHeader {
   width: 100%;
   display: flex;
-  font-size: clamp(24px, 5vw, 40px);
+  font-size: clamp(14px, 5vw, 40px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 .error-span {
