Atualização da home page

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,24 +6,29 @@
   --shadow: rgb(0, 0, 0, 0.5);
 }
 
-@media(max-width: 700px){
+@media(max-width: 700px) {
   .leftside-container {
     width: 100% !important;
   }
-  .mobile-nav-bar{
+
+  .mobile-nav-bar {
     display: flex !important;
   }
+
   .default-nav-bar {
     display: none !important;
   }
-  .leftside-container button{
+
+  .leftside-container button {
     width: 100%;
     display: flex;
     justify-content: center !important;
   }
+
   .row-marketing {
     padding-left: 0 !important;
   }
+
   .row-marketing h1 {
     display: flex !important;
     flex-direction: column !important;
@@ -36,7 +41,7 @@
   }
 }
 
-body{
+body {
   flex-direction: column;
   align-items: center;
   /* Impossibilita que a tela seja movida no sentido horzintal */
@@ -58,8 +63,8 @@ body{
   font-size: 20px;
 }
 
-.nav-selected{
-  color: var(--muted-text) !important; 
+.nav-selected {
+  color: var(--muted-text) !important;
 }
 
 .default-nav-bar a {
@@ -81,8 +86,8 @@ body{
 }
 
 
-.main-container{
-  width: 100vw;  
+.main-container {
+  width: 100vw;
   height: 100vh;
   background-image: url("../assets/bg-inicio.png");
   background-attachment: fixed;
@@ -93,7 +98,7 @@ body{
 }
 
 
-.leftside-container{
+.leftside-container {
   width: 45%;
   height: 100%;
   display: flex;
@@ -109,6 +114,7 @@ body{
   font-size: clamp(30px, 3vw, 40px);
   font-weight: normal;
 }
+
 .leftside-container button {
   padding-top: 30px;
   background-color: transparent;
@@ -134,7 +140,7 @@ body{
   margin-top: 80px;
 }
 
-.leftside-container button:hover{
+.leftside-container button:hover {
   cursor: pointer;
   opacity: 75%;
 }
@@ -153,6 +159,7 @@ body{
   height: 10%;
   font-size: 20px;
 }
+
 .mobile-nav-bar img {
   margin-left: 20px;
 }
@@ -174,7 +181,8 @@ body{
   cursor: pointer;
   transition: 0.5s;
 }
-.side-bar{
+
+.side-bar {
   /* Deixa o container acima dos outros elementos html */
   position: fixed;
   z-index: 1000;
@@ -191,6 +199,7 @@ body{
   gap: 20px;
   transition: transform 0.5s ease-in-out;
 }
+
 .side-bar a {
   text-decoration: none !important;
   color: var(--primary-text);
@@ -200,29 +209,35 @@ body{
 .carousel {
   width: 100vw;
   height: 100vh;
-  overflow-x: auto; /* Ativa a barra de rolagem horizontal */
+  overflow-x: auto;
+  /* Ativa a barra de rolagem horizontal */
   display: flex;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch; /* Suaviza a rolagem no mobile */
+  -webkit-overflow-scrolling: touch;
+  /* Suaviza a rolagem no mobile */
 }
 
 /* Exibe a barra de rolagem */
 .carousel::-webkit-scrollbar {
-  height: 8px; /* Define altura da barra no Chrome/Safari */
+  height: 8px;
+  /* Define altura da barra no Chrome/Safari */
 }
 
 .carousel::-webkit-scrollbar-track {
-  background: #ddd; /* Cor do fundo da barra */
+  background: #ddd;
+  /* Cor do fundo da barra */
 }
 
 .carousel::-webkit-scrollbar-thumb {
-  background: #888; /* Cor do indicador da barra */
+  background: #888;
+  /* Cor do indicador da barra */
   border-radius: 10px;
 }
 
 .carousel::-webkit-scrollbar-thumb:hover {
-  background: #555; /* Cor ao passar o mouse */
+  background: #555;
+  /* Cor ao passar o mouse */
 }
 
 /* Cada slide ocupa 100% da largura da tela */
@@ -254,7 +269,7 @@ body{
   border-radius: 5px;
 }
 
-.container{
+.container {
   background-color: #3F4F44;
   height: 100vh;
   width: 100vw;
@@ -265,61 +280,118 @@ body{
 }
 
 .card {
-  
-  background-color: white; /* Fundo branco dos cards */
-  border-radius: 40px; /* Bordas arredondadas */
-  padding: 20px; /* Espaçamento interno */
-  width: 250px; /* Largura dos cards */
+
+  background-color: white;
+  /* Fundo branco dos cards */
+  border-radius: 40px;
+  /* Bordas arredondadas */
+  padding: 20px;
+  /* Espaçamento interno */
+  width: 250px;
+  /* Largura dos cards */
   height: 450px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  /* Sombra suave */
 }
 
 h2 {
-  margin-top: 0;  /* Remove a margem superior do título */
+  margin-top: 0;
+  /* Remove a margem superior do título */
 }
 
 p {
-  color: #333; /* Cor do texto */
+  color: #333;
+  /* Cor do texto */
 }
 
-.historia{
+.historia {
   position: relative;
   display: inline-block;
 }
 
 .cidade {
-  width: 100vw; /* Ajusta a largura da imagem */
+  width: 100vw;
+  /* Ajusta a largura da imagem */
   display: block;
+  
 }
 
 .historia h1 {
   position: absolute;
-  top: 15%; /* Centraliza verticalmente */
-  left: 10%; /* Centraliza horizontalmente */
-  color: white; /* Cor do texto */
+  top: 25%;
+  /* Centraliza verticalmente */
+  left: 16%;
+  /* Centraliza horizontalmente */
+  color: white;
+  /* Cor do texto */
   border-radius: 5px;
   font-size: 40px;
 }
 
 .historia h3 {
   position: absolute;
-  top: 30%; /* Ajusta a posição vertical */
-  left: 5%; /* Define a margem à esquerda */
-  transform: translateY(-50%); /* Centraliza verticalmente */
-  width: 40%; /* Define a largura do bloco de texto */
-  color: white; /* Cor do texto */
-  font-size: 18px; /* Ajusta o tamanho da fonte */
-  font-weight: bold; /* Deixa o texto em negrito */
-  background: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente para legibilidade */
-  padding: 10px 20px; /* Espaçamento interno */
-  border-radius: 5px; /* Cantos arredondados */
+  top: 45%;
+  /* Ajusta a posição vertical */
+  left: 5%;
+  /* Define a margem à esquerda */
+  transform: translateY(-50%);
+  /* Centraliza verticalmente */
+  width: 40%;
+  /* Define a largura do bloco de texto */
+  color: white;
+  /* Cor do texto */
+  font-size: 18px;
+  /* Ajusta o tamanho da fonte */
+  font-weight: bold;
+  /* Deixa o texto em negrito */
+  background: rgba(0, 0, 0, 0.5);
+  /* Fundo semi-transparente para legibilidade */
+  padding: 10px 20px;
+  /* Espaçamento interno */
+  border-radius: 15px;
+  /* Cantos arredondados */
 }
 
-.pessoa{
+.pessoas {
   position: absolute;
+  height: 350px;
+  top: 30%;
+  left: 50%;
+  border-radius: 40px;
 }
 
+.background{
+background-color: white;
+height: 100vh;
+width: 100vw;
+}
 
+.fundoperfil{
+background-color: rgba(196, 189, 189, 0.837);
+position: relative;
+top: 10%;
+left: 12%;
+height: 200px;
+width: 200px;
+border-radius: 100px;
+}
 
+.fundoperfil2{
+  background-color: rgba(196, 189, 189, 0.837);
+  position: relative;
+  top: 30%;
+  left: 12%;
+  height: 200px;
+  width: 200px;
+  border-radius: 100px;
+  }
 
-
+  .fundoperfil3{
+    background-color: rgba(196, 189, 189, 0.837);
+    position: relative;
+    bottom: 45%;
+    left: 40%;
+    height: 200px;
+    width: 200px;
+    border-radius: 100px;
+    }
