substitui as cores de fundo e texto pelas variaveis

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -259,7 +259,7 @@ body {
   bottom: 20%;
   left: 10%;
   background: rgba(0, 0, 0, 0.5);
-  color: white;
+  color: var(--primary-text);
   padding: 15px;
   font-size: 1.2rem;
   max-width: 40%;
@@ -267,7 +267,7 @@ body {
 }
 
 .container {
-  background-color: #3F4F44;
+  background-color: var(--primary-bg);
   height: 100vh;
   width: 108vw;
   display: flex;
@@ -318,7 +318,7 @@ body {
   margin-top: auto;
   padding: 10px 16px;
   background-color: #007BFF;
-  color: white;
+  color: var(--primary-text);
   font-size: 14px;
   font-weight: bold;
   border: none;
@@ -354,7 +354,7 @@ p {
   position: absolute;
   top: 25%;
   left: 16%;
-  color: white;
+  color: var(--primary-text);
   border-radius: 5px;
   font-size: 40px;
 }
@@ -365,7 +365,7 @@ p {
   left: 5%;
   transform: translateY(-50%);
   width: 40%;
-  color: white;
+  color: var(--primary-text);
   font-size: 18px;
   font-weight: bold;
   background: rgba(0, 0, 0, 0.5);
@@ -382,7 +382,7 @@ p {
 }
 
 .background {
-  background-color: white;
+  background-color: var(--primary-text);
   height: 100vh;
   width: 100vw;
 }
