--- a/public/css/index.css
+++ b/public/css/index.css
@@ -486,7 +486,7 @@ p {
 .footer{
 background-color: black;
 position: relative;
-padding: 38px;
+padding: 23px;
 width: 100vw;
 margin-top: -75px;
 }
@@ -575,4 +575,10 @@ body {
 
 .scroll-animate.visible {
   animation: fadeInScroll 0.6s ease-out forwards;
+}
+
+.linkedin{
+  position: relative;
+  height: 50px;
+  left: 10%;
 }
