--- a/public/css/index.css
+++ b/public/css/index.css
@@ -224,6 +224,7 @@ body {
   overflow-x: auto;
   display: flex;
   scroll-snap-type: x mandatory;
+  overflow-y: hidden;
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
 }
@@ -303,7 +304,7 @@ body {
 }
 
 .card:hover {
-  transform: translateY(-5px);
+  transform: translateY(-20px);
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
 }
 
