--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,11 @@
 /* Criação das variaveis css, atribuindo elas para o root da aplicação inteira */
 :root {
-  --primary-bg: #3F4F44;
+  --primary-bg: #f3f7ea;
   --second-bg: #2C3930;
-  --primary-text: whitesmoke;
+  --primary-text: #F4F1DE;
   --muted-text: #DCD7C9;
+  --black-text: #20341e;
+  --primary-green: #9abe4a;
   --shadow: rgb(0, 0, 0, 0.5);
 }
 
@@ -15,7 +17,7 @@
   .mobile-nav-bar {
     display: flex !important;
     width: 100%;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     gap: 45px;
     color: var(--primary-text);
@@ -23,6 +25,7 @@
     background-color: var(--primary-bg);
     margin: 0;
     height: 10%;
+    padding: 10px;
     font-size: 20px;
   }
 
@@ -38,6 +41,7 @@
 
   .row-marketing {
     padding-left: 0 !important;
+    justify-content: center !important;
   }
 
   .row-marketing h1 {
@@ -65,22 +69,43 @@
     display: none;
     position: fixed;
     z-index: 1000;
-    background-color: var(--primary-bg);
+    background-color: var(--second-bg);
     height: 100%;
     width: 30%;
-    box-shadow: 4px 0 10px rgba(0, 0, 0, 0.5);
+   /*  box-shadow: 4px 0 10px rgba(0, 0, 0, 0.5); */
     top: 0;
     left: 0;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: space-around;
     padding-top: 40px;
     gap: 20px;
+    font-weight: bold;
+    border-radius: 10px;
   }
-  
+
   .side-bar a {
     text-decoration: none !important;
     color: var(--primary-text);
+  }
+  .side-bar-auth-container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    height: fit-content;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 30px;
+  }
+  .side-bar-links-container{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    height: fit-content;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
   }
 
   .historia {
@@ -88,7 +113,7 @@
     flex-direction: column !important;
     gap: 20px;
     width: 100%;
-    height: 100vh;
+    height: 150vh !important;
     justify-content: center;
   }
 
@@ -100,13 +125,7 @@
   }
 
   .history-row p {
-    width: 80%;
-    color: var(--primary-text);
-    font-size: 18px;
-    font-weight: bold;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 10px 20px;
-    border-radius: 15px;
+    width: 80% !important;
   }
   
  /*  .cidade {
@@ -122,7 +141,6 @@
   
   .historia h1 {
     color: var(--primary-text);
-    border-radius: 5px;
     font-size: 40px;
   }
   
@@ -133,8 +151,7 @@
   }
 
   .container{
-    flex-direction: column !important;
-    height: 120vh !important;
+    height: 280vh !important;
     display: flex !important;
     width: 100%;
     display: flex;
@@ -144,10 +161,56 @@
   }
 
   .feedback-container h1{
-    font-size: 22px !important;
+    font-size: 18px !important;
   }
   .contribute-button{
     width: 50% !important;
+  }
+
+  .container-row{
+    flex-direction: column;
+    height: 100% !important;
+  }
+
+  .card{
+    height: 80% !important;
+  }
+
+  .background{
+    height: 190vh !important;
+  }
+
+  .background h1 {
+    font-size: 40px !important;
+  }
+
+  .container h1 {
+    font-size: 40px !important;
+  }
+
+  .moldura-desktop{
+    display: none !important;
+  }
+
+  .moldura-mobile{
+    display: flex !important;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 120px;
+  }
+  .mobile-moldura-row{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
+
+  .rightside-container{
+    display: none !important;
   }
 }
 
@@ -161,16 +224,16 @@ body {
 .default-nav-bar {
   display: flex;
   width: 100%;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 45px;
-  color: var(--primary-text);
+  color: var(--black-text);
   /* Utilizando a variavel criada ali em cima para não ficar repetindo ou adivinhando cores */
   background-color: var(--primary-bg);
   padding: 10px;
   margin: 0;
   height: 10%;
   font-size: 20px;
+  font-weight: bold;
 }
 
 .nav-selected {
@@ -181,8 +244,8 @@ body {
   text-decoration: none;
   outline: none;
   border: none;
-  color: var(--primary-text);
   transition: 0.5s;
+  color: var(--black-text);
 }
 
 .default-nav-bar a:hover {
@@ -191,10 +254,61 @@ body {
   transition: 0.5s;
 }
 
-.logo-nav-container {
-  width: 50%;
+.default-nav-links-container{
+  width: fit-content;
   display: flex;
-  justify-content: start;
+  gap: 50px;
+  align-items: center;
+  color: var(--black-text);;
+}
+.default-nav-auth-container{
+  width: fit-content;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 20px;
+  margin-right: 20px;
+}
+
+.log-button{
+  width: 150px;
+  height: 40px;
+  background-color: transparent;
+  border: 1px solid var(--black-text);
+  border-radius: 10px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: var(--black-text);
+}
+.log-button:hover{
+  opacity: 80%;
+  cursor: pointer;
+}
+
+.sign-button{
+  width: 150px;
+  height: 40px;
+  background-color: var(--black-text);
+  border: none;
+  border-radius: 10px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: var(--primary-text);
+}
+
+.sign-button:hover{
+  opacity: 80%;
+  cursor: pointer;
+}
+
+.logo-nav-container {
+  width: fit-content;
   margin-left: 20px;
 }
 
@@ -202,14 +316,27 @@ body {
 .main-container {
   width: 100%;
   height: 100vh;
-  background-image: url("../assets/bg-inicio.png");
+ /*  background-image: url("../assets/bg-inicio.png");
   background-attachment: fixed;
   background-size: cover;
-  background-position: center;
+  background-position: center; */
   display: flex;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
+  background-color: var(--primary-bg);
+}
+.rightside-container{
+  width: 55%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.rightside-container img{
+  width: 90%;
+  height: 60%;
+  border-radius: 10px;
+}
 
 .leftside-container {
   width: 45%;
@@ -219,8 +346,8 @@ body {
   justify-content: start;
   align-items: center;
   padding-top: 5%;
-  color: var(--primary-text);
-  background-color: var(--shadow);
+  color: var(--second-bg);
+  background-color: var(--primary-bg);
 }
 
 .leftside-container h1 {
@@ -232,11 +359,11 @@ body {
   padding-top: 30px;
   background-color: transparent;
   border: none;
-  color: var(--muted-text);
+  color: var(--black-text);
   display: flex;
   align-items: center;
   gap: 10px;
-  border-bottom: var(--muted-text) 2px solid;
+  border-bottom: var(--black-text) 2px solid;
   font-size: medium;
 }
 
@@ -244,26 +371,25 @@ body {
   display: flex;
   justify-content: start;
   width: 100%;
-  padding-left: 40%;
+  padding-left: 40%;;
 }
 
 .row-marketing {
   width: 100%;
   padding-left: 40%;
   margin-top: 80px;
+  display: flex;
+  justify-content: start;
+}
+
+.row-marketing span {
+  color: var(--primary-green);
 }
 
 .leftside-container button:hover {
   cursor: pointer;
   opacity: 75%;
 }
-
-.mobile-nav-bar button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 
 .mobile-nav-bar img {
   margin-left: 20px;
@@ -272,7 +398,7 @@ body {
 .mobile-nav-bar button {
   outline: none;
   border: none;
-  color: var(--primary-text);
+  color: var(--black-text);
   background-color: transparent;
   width: 20%;
   height: 10%;
@@ -353,12 +479,25 @@ body {
 
 .container {
   background-color: var(--primary-bg);
-  height: 100vh;
+  height: 130vh;
   width: 100%;
   display: flex;
-  gap: 20px;
+  gap: 80px;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.container-row{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px; 
+}
+.container h1{
+  color: var(--black-text);
 }
 
 .card {
@@ -366,13 +505,16 @@ body {
   border-radius: 24px;
   padding: 24px;
   width: 260px;
-  height: 100%;
+  height: 80%;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+.card-header{
+  color: var(--primary-green);
 }
 
 .card:hover {
@@ -448,17 +590,16 @@ p {
 }
 
 .historia h1 {
-  color: var(--primary-text);
+  color: var(--black-text);
   padding-bottom: 50px;
 }
 
-.historia h3 {
-  transform: translateY(-50%);
+.historia p {
   width: 40%;
   color: var(--primary-text);
   font-size: 18px;
   font-weight: bold;
-  background: rgba(0, 0, 0, 0.5);
+  background: var(--black-text);
   padding: 10px 20px;
   border-radius: 15px;
 }
@@ -478,99 +619,40 @@ p {
 
 .background {
   background-color: var(--primary-text);
-  height: 100vh;
+  height: 150vh;
   width: 100%;
   background-color: var(--primary-bg);
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  gap: 50px;
+  gap: 120px;
   padding-bottom: 100px;
+  padding-top: 100px;
 }
 
 .background h1 {
-  color: var(--primary-text);
+  color: var(--black-text);
 }
 
 .background-row{
   display: flex;
   width: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   gap: 100px;
 }
 
-.fundoperfil {
-  background-color: rgba(196, 189, 189, 0.837);
-  position: relative;
-  height: 140px;
-  width: 145px;
+.moldura-membro {
+  height: 180px;
+  width: 170px;
   border-radius: 90px;
 }
 
-.fundoperfil h4 {
-  position: relative;
-}
-
-.fundoperfil2 h4{
-  position: relative;
-}
-
-.fundoperfil3 h4{
-  position: relative;
-}
-
-.fundoperfil4 h4{
-  position: relative;
-}
-
-.fundoperfil5 h4{
-  position: relative;
-}
-
-.fundoperfil6 h4{
-  position: relative;
-}
-
-.fundoperfil2 {
-  background-color: rgba(196, 189, 189, 0.837);
-  position: relative;
-  height: 140px;
-  width: 145px;
-  border-radius: 90px;
-}
-
-.fundoperfil3 {
-  background-color: rgba(196, 189, 189, 0.837);
-  position: relative;
-  height: 140px;
-  width: 145px;
-  border-radius: 90px;
-}
-
-.fundoperfil4 {
-  background-color: rgba(196, 189, 189, 0.837);
-  position: relative;
-  height: 140px;
-  width: 145px;
-  border-radius: 90px;
-}
-
-.fundoperfil5 {
-  background-color: rgba(196, 189, 189, 0.837);
-  position: relative;
-  height: 140px;
-  width: 145px;
-  border-radius: 90px;
-}
-
-.fundoperfil6 {
-  background-color: rgba(196, 189, 189, 0.837);
-  position: relative;
-  height: 140px;
-  width: 145px;
-  border-radius: 90px;
+.imagem-membro {
+  width: inherit;
+  height: inherit;
+  border-radius: 70%;
 }
 
 .footer{
@@ -759,7 +841,7 @@ body {
 }
 
 #howToHelp{
-  color: var(--second-bg);
+  color: var(--primary-green);
   font-weight: bold;
   font-size: large;
 }
@@ -767,7 +849,7 @@ body {
 .contribute-button{
   width: 20%;
   height: 8%;
-  background-color: var(--primary-bg);
+  background-color: var(--black-text);
   border: none;
   color: var(--primary-text);
   border-radius: 10px;
@@ -784,8 +866,14 @@ body {
   color: var(--muted-text);
 }
 
-/* .separator-row{
+.moldura-mobile {
+  display: none;
+}
+.moldura-membro p {
+  color: var(--black-text);
+  font-size: 15px;
   width: 100%;
-  height: 10px
-  background-color: var(--primary-bg);
-} */
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+}
